# Polymarket_Collector

./: .gitignore  Cargo.toml  Makefile  README.md
analysis/: db.py  models.py  run.py  stats.py  timeseries.py
analysis/viz/: interactive.py  static.py
src/: api.rs  collector.rs  config.rs  db.rs  error.rs  main.rs  models.rs  timing.rs
src/ws/: binance.rs  mod.rs  polymarket.rs
