[package]
name = "polymarket_collector"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3"
reqwest = { version = "0.13", features = ["json"] }
rusqlite = { version = "0.38", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.50", features = ["full"] }
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
tokio-util = "0.7"
openssl = { version = "0.10", features = ["vendored"] }
